resources/public/css/main.css
/* === GLOBAL === */

* {
    font-family: "Gill Sans", "Gill Sans MT", Calibri, "KaiTi", "楷体", STKaiti, "华文楷体", sans-serif;
    font-weight: 300;
    color: #999999;
    letter-spacing: 0.2ch;
    padding: 0;
    margin: 0;
    hyphens: auto;

    /* otherwise safari fonts become too thin */
    -webkit-font-smoothing: subpixel-antialiased;
}

/* Hanzi are made a bit darker than latin text to make them stand out */
:lang(zh) {
	color: #555555;
}

::placeholder {
    color: #DDD;
}

a {
    /* So that links won't suddenly reset a custom font to the global one. */
    font-family: inherit;
	color: inherit;
	text-decoration: none;
}

a:hover {
	color: #4477DD;
}

/* headings and content inside them get the serif fonts */
h1, h2, h3, h1 *, h2 *, h3 * {
	color: #555555;
	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
	margin-bottom: 0.5em;
}

h1 {
    font-size: 24pt;
}

h2 {
    font-size: 20pt;
}

p {
	font-size: 14pt;
	margin: 0 0 1em 0;
}

ol, ul {
    margin: 1em 0 1em 4ch;
}

li {
    margin-bottom: 0.2em;
}




/* === ANIMATIONS === */

@keyframes fade-in {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}




/* === MAIN & HEADER === */

/*  would have styled BODY or HTML instead if React could access them */
main {
    min-height: 100vh;
    background: #FCFCFB;
    transition: all 0.5s;
}

main.with-article {
	background: white;
}

/* The header (logo, input bar) transitions from center to top.  */
header {
    position: fixed;
	min-width: 100%; /* expand entirely, but always keep a little margin*/
	left: 50%;

    /* Display on top of content when transitioning. */
	z-index: 1;

	/* Faster going down than up! */
	transition: all 0.3s;

    /* Centered vertically */
	top: 42%; /* using 50% looks off somehow...*/
	transform: translate(-50%, -40%);
	-webkit-transform: translate(-50%, -40%);
    -moz-transform: translate(-50%, -40%);
    -o-transform: translate(-50%, -40%);
    -ms-transform: translate(-50%, -40%);
}

main.with-article > header {
	/* Slower going up than down. */
	transition: all 0.5s;

    /* Add some colours. */
	background: #FCFCFB;
	border-bottom: solid 1pt #DDDDDD;

    /* Go to the top of the page. */
	top: 0;
    transform: translate(-50%, 0);
	-webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -o-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
}

/* 	aligner is necessary for limiting width and centering horisontally!
	without "min-width:98%;" in .vcenter, .vcentor gets crammed,
	so this extra class is necessary to get a max-width.
*/
header div#aligner {
	max-width: 80ch;
	margin: auto;
	padding: 1ch;
	text-align: center;
	vertical-align: middle;

	/* makes logo img able to assume 0 height */
	line-height: 0;
}

/*  The main logo of the site fades in like most elements and gets smaller
    when the site displays some page content. */
header img {
	animation: fade-in 0.5s ease;
	transition: all 0.3s;
    max-height: 7em;
    margin-bottom: 2em;
	width: 90%; /* otherwise image could overflow on small page widths */

    /* TODO: find fixes for non-Chrome browsers */
    user-drag: none;
    user-select: none;
}

main.with-article > header img {
	max-height: 0;
	margin: 0;
	vertical-align: middle;
}

/* Also known as the #study-form */
div#header-input {
	display: flex;
}

/* Formerly known as the #study-input */
div#header-input > input {
	animation: fade-in 1s ease;
    transition: all 0.5s;

	font-size: 20pt;
	color: black;

	padding: 0.2ch 0.4ch;
	border: 1pt solid #999999;
	border-radius: 0.5ch;
	background-color: white;

	/* Take up full width */
    flex: 1;
}

/* Grey colouring of input when action-chooser is active */
div#header-input > input[disabled] {
	background-color: #DDDDDD;
}

/* Formerly known as the #study-button */
div#header-input > button {
	border: 0;
	padding: 0;
	font-size: 0;
	width: 0;
}



/* === VERSION NUMBER === */
address {
	animation: fade-in 3s ease;
	color: #DDD;
	font-size: 10pt;
	font-style: inherit;
	letter-spacing: 0.2ch;
	position: absolute;
	padding: 1em;
	right: 0;
	top: 0;
	transition: all 0.5s;
}

main.with-article address {
    opacity: 0;
}




/* === FILTERS === */
div#filters {
    transition: all 0.3s;
    margin: 1.2em 0 0.3em 0;
    font-size: 12pt;
    color: #DDDDDD; /* for the separating dots */
    letter-spacing: 0.3ch;
    word-spacing: 0.5ch;
    text-align: center;
}

/* TODO: there is a slight cursor flicker on hover I can't seem to remove */
/* the opacity of the labels is changed back instantly to avoid overflow */
div#filters.hidden {
    transition: height 0.3s, margin 0.3s, opacity 0s;
    height: 0;
    margin: 0;
    opacity: 0;
    display: hidden; /* make sure it's not selectable */
}

div#filters input[type=radio] {
    /* hide the actual radio button */
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

div#filters input[type=radio] + label {
    cursor: pointer;
    color: #CCCCCC;
    transition: all 0.5s;
}

div#filters input[type=radio] + label:hover {
    text-decoration: underline;
}

div#filters input[type=radio]:checked + label {
    color: black;
}

div#filters input[type=radio]:checked + label:hover {
    text-decoration: none;
    cursor: default;
}




/* === ARTICLE === */

/* controls where the content appears */
article {
	animation: fade-in 0.5s ease;
	transition: all 0.3s; /* should be synchronised with filters transition */

	/* positioning */
    position: relative;
    top: 4.2em; /* pos relative to header varies a bit on different browsers */
    margin: auto;
    padding: 0 1ch;

    /* 	to make sure the page can reached on small screen sizes,
        otherwise the footer might block the view */
    border-bottom: 3.5rem solid rgba(255,255,255,0);

	/* box */
	max-width: 80ch;
}

/* when filters are available for search results, the content appears lower */
article.with-filters {
    top: 6rem;
}




/* === FOOTER === */

footer {
	animation: fade-in 1.5s ease;

	/* text */
	text-align: center;

	/* box */
	background: #BB5544;
	padding: 1.2em 0;
	width: 100%;

	/* shadow */
	box-shadow: inset 0 0 1.5rem 0 rgba(0, 0, 0, 0.3);

	/* position */
	position: fixed;
	z-index: 2;
	margin: 0;
    bottom: 0;
}

nav {
	/* text-related */
    font-size: 12pt;
    word-spacing: 0.3ch;
    line-height: 1em;
    color: #FFBBBB;
}

nav a {
    letter-spacing: 0.4ch;
}

nav > #script-changer {
    padding: 0.2em 0.5em;
    border: 1pt solid #CC6666;
    border-radius: 0.5ch;
    color: #FFBBBB;
    cursor: pointer;

    /* nav links shouldn't jump around when changing script */
    display: inline-block;
    min-width: 7ch;

    /* fix for #14 (translation pop-up on Chrome mobile) */
    user-drag: none;
    user-select: none;
}

nav > #script-changer:hover {
	text-decoration: none;
	color: white;
	border-color: white;
}

footer a {
	color: white;
}

footer a:hover {
	color: white;
	text-decoration: underline;
}

footer a.current-page, footer a.current-page:hover {
	color: #661111;
	text-decoration: none;
}




/* === ACTION CHOOSER === */

fieldset#actions {
    /* box */
    padding: 2ch;
    width: 40ch;
	background: #BB5544;
    border: none;
    border-radius: 1ch;
    box-shadow: 0 4pt 12pt 0 rgba(0, 0, 0, 0.2),
                0 4pt 12pt 0 rgba(0, 0, 0, 0.19),
                inset 0 0 1rem 0 rgba(0, 0, 0, 0.3);

    /* center vertically
      adapted from .main */
    z-index: 2;
    position: fixed;
    top: 50%; /* using 50% looks off somehow...*/
    left: 50%;
    transform: translate(-50%, -70%);
    -webkit-transform: translate(-50%, -70%);
    -moz-transform: translate(-50%, -70%);
    -o-transform: translate(-50%, -70%);
    -ms-transform: translate(-50%, -70%);

    /* expand to fit content
       https://teamtreehouse.com/community/how-can-i-make-my-divs-grow-wider-according-to-their-content */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    animation: fade-in 0.3s linear;
}

fieldset#actions * {
    color: #FFBBBB;
}

/* the action chooser h1 is (unlike other h1 elements) styled sans-serif */
fieldset#actions > legend {
    font-family: "Gill Sans", "Gill Sans MT", Calibri, "KaiTi", "楷体", STKaiti, "华文楷体", sans-serif;
    font-size: 18pt;
    text-align: center;

    /* positioning is a bit weird with this thing */
    position: relative;
    top: 1em;
    margin: 1em 0;
    padding: 1ch 0 0.5ch 0;
    width: 100%;

    /* displays as a kind of HR */
    border-bottom: 1pt solid #CC6666;

    /* fake top border of the fieldset itself */
    border-top: none;
}

fieldset#actions > ol {
    margin: 0;
    padding: 0 0 0 3ch;
    font-size: 16pt;
}

fieldset#actions > ol > li > input[type=radio] {
    /* hide the actual radio button */
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

fieldset#actions > ol > li > label {
    cursor: pointer;
}

/* Reveal that the options are also clickable */
fieldset#actions > ol > li > label:hover {
    text-decoration: underline;
}

/* Colour the currently checked button white */
fieldset#actions > ol > li > input[type=radio]:checked + label {
    color: white;
}




/* === DICTIONARY === */

.dictionary-header {
    display: flex;
    flex-direction: row;
}

.dictionary-header-bubble {
    flex-grow: 1;
    display: flex;
    align-items: center;
}

.etymology {
    border-radius: 1ch;
    padding: 1em;
    margin: auto;
    font-size: 10pt;
    font-style: italic;
    font-weight: 100;
    text-align: center;
    color: #BBBBBB;
    letter-spacing: 0.5ch;
}

.search-result h1 {
    text-align: center;
}

.dictionary-entry, .dictionary-entries {
	font-size: 14pt;
}

.dictionary-entries {
	list-style-type: none;
	padding: 0;
	margin: 0;

    /* TODO: need new html that makes text-overflow: ellipsis possible */
    /* make sure text stays on a single line */
    white-space: nowrap;
    overflow: hidden;
}

.dictionary-entries li {
    margin-bottom: 0.8em;
}

.dictionary-entries a > *:lang(zh) {
    display: inline-block;
	font-size: 20pt;
	padding: 0.2em;
	border: 1pt solid #AAAAAA;
	border-radius: 0.5ch;
	background-color: white;
	color: #666666;
}

.dictionary-entries span.pinyin {
    color: #999999;
}

.dictionary-entries span.pinyin:first-child {
    color: #DD8888;
}

.dictionary-entries ul {
    font-size: 14pt;
    vertical-align: top;
    display: inline-block;
    list-style-type: none;
	padding: 0;
	margin: 0.3em 0 0 0;
}

.dictionary-entries ul li {
    padding: 0;
    margin: 0 0 0.5em 0;
}

/* marks a special tag in a dictionary entry (in the subheader after pinyin) */
.tag {
	font-size: 14pt;
	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
	letter-spacing: 0.3ch;
    padding: 0.2em 1ch;
    margin-right: 0.5ch;
    border: 1pt solid #AAAAAA;
    border-radius: 0.5ch;
    background-color: white;
    color: #666666;
}

.frequency-high {
    color: #7bce34;
    font-family: inherit;
}

.frequency-medium {
    color: #ffcc2f;
    font-family: inherit;
}

.frequency-low {
    color: #ead7cf;
    font-family: inherit;
}

.dictionary-entry h1 {
	font-size: 52pt;
}

.dictionary-entry .subheader {
	font-size: 18pt;
	line-height: 1.5;
}

.pinyin {
	color: #DD8888;
	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
}

.pinyin::before {
	content: "[";
}

.pinyin::after {
	content: "]";
}

.pinyin a, .dictionary-entries a {
	color: inherit;
}

/* TODO: clean up this mess... */
.pinyin a:hover, .dictionary-entries a:hover, a:hover .pinyin, .dictionary-entries li:hover span.pinyin, .dictionary-entries li:hover span.pinyin:first-child  {
	color: #4477DD;
	border-color: #4477DD;
}

